--- a/cincyFoodTrucks/src/main/res/menu/admin_menu.xml
+++ b/cincyFoodTrucks/src/main/res/menu/admin_menu.xml
@@ -86,12 +86,17 @@
         
         android:title="@string/strAbout"/>
 
-    	            	           <item
+    <item
         android:id="@+id/action_newsfeed"
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/strNewsFeed"/>
-    	
-    
+    <item
+        android:id="@+id/action_connect_facebook"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/strConnectFacebook"/>
+
+
 
 </menu>
